# iQAN_AE

./: .gitignore  CMakeLists.txt  README.md
app/: PSS_v5_distance_threshold_profiling.cpp  no_sync.cpp  online_search.cpp
core/: Searching.202102022027.PSS_v5.dist_thresh.profiling.cpp  Searching.202102022027.PSS_v5.dist_thresh.profiling.h  Searching.202111151933.PSS_v5.index_adaptive_merge_L_master.cpp
include/: definitions.h  utils.h
results/deep100m/: deep100m_8t_iqan_1stepsync.csv  deep100m_8t_iqan_nosync.csv  deep100m_8t_iqan_seq1.csv  deep100m_8t_iqan_seq10.csv  deep100m_8t_iqan_seq20.csv  deep100m_8t_iqan_seq30.csv  deep100m_8t_ours.csv
results/gist1m/: gist1m_8t_iqan_1stepsync.csv  gist1m_8t_iqan_nosync.csv  gist1m_8t_iqan_seq1.csv  gist1m_8t_iqan_seq10.csv  gist1m_8t_iqan_seq20.csv  gist1m_8t_ours.csv
results/sift100m/: sift100m_16t_iqan_nosync.csv  sift100m_16t_iqan_seq1.csv  sift100m_16t_iqan_seq10.csv  sift100m_8t_iqan_1stepsync.csv  sift100m_8t_iqan_nosync.csv  sift100m_8t_iqan_seq1.csv  sift100m_8t_iqan_seq10.csv  sift100m_8t_iqan_seq20.csv  sift100m_8t_iqan_seq30.csv  sift100m_8t_iqan_seq50.csv  sift100m_8t_ours.csv
scripts/: all_run.sh  deep.sh  deep100m.sh  gist.sh  gist1m.sh  glove.sh  laion.sh  low_q_graph.sh  mainsearch.sh  ndc.sh  no_sync.sh  online.sh  openai.sh  plot_nosync_vs_iqan.py  scalability.sh  sift100m.sh  sift10m.sh  t2i.sh  tuned_iqan.sh  webvid.sh  wiki.sh
